tests/NormalTests/paczka1/fuzzy1/95230150.err
Error in line 2: Two9yjEZI S504 60,8
Error in line 5: lskkK S882 67,9
Error in line 17: lskkK S504 61,0
